# rag-eval-framework

./: .claudeignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  env.example  pyproject.toml
.claude/: settings.json
.claude/agents/: code-optimiser.md  code-reviewer.md  codebase-review.md  devops-reviewer.md  doc-generator.md  linter.md  phase-acceptance.md  refactorer.md  test-generator.md
.claude/commands/: create_worktree.md  merge_worktree.md
.claude/skills/graph-of-thought/: SKILL.md
.claude/skills/implementation-spec/: SKILL.md
.claude/skills/requirements-elicitation/: SKILL.md
.claude/skills/research-brief/: SKILL.md
.claude/skills/trade-off-analysis/: SKILL.md
.claude/skills/tree-of-thought/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push  setup-hooks.sh
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: knowledge_bases.json
data/eval/: eval_aggregate_20260607_070217.json  eval_aggregate_20260607_070349.json  eval_aggregate_20260607_070520.json  eval_aggregate_latest.json  eval_comparison_20260607_070217.md  eval_comparison_20260607_070349.md  eval_comparison_20260607_070520.md  eval_comparison_latest.md  eval_detail_20260607_070217.json  eval_detail_20260607_070349.json  eval_detail_20260607_070520.json
data/prompts/: policy_generation_prompt.txt  qa_generation_prompts.json
data/qa/: qa_candidates.json  qa_failed.json  qa_pairs.json
data/synthetic/policies/: anti-money-laundering-policy.md  anti-money-laundering-policy.md.metadata.json  anti-money-laundering-policy.metadata.json  business-continuity-policy.md  business-continuity-policy.md.metadata.json  business-continuity-policy.metadata.json  change-management-policy.md  change-management-policy.md.metadata.json  change-management-policy.metadata.json  client-money-and-assets-policy.md  client-money-and-assets-policy.md.metadata.json  client-money-and-assets-policy.metadata.json  conflicts-of-interest-policy.md  conflicts-of-interest-policy.md.metadata.json  conflicts-of-interest-policy.metadata.json  consumer-duty-implementation-policy.md  consumer-duty-implementation-policy.md.metadata.json  consumer-duty-implementation-policy.metadata.json  credit-risk-management-policy.md  credit-risk-management-policy.md.metadata.json  credit-risk-management-policy.metadata.json  customer-complaints-handling-procedure.md  customer-complaints-handling-procedure.md.metadata.json  customer-complaints-handling-procedure.metadata.json  data-protection-and-gdpr-compliance-policy.md  data-protection-and-gdpr-compliance-policy.md.metadata.json  data-protection-and-gdpr-compliance-policy.metadata.json  financial-crime-prevention-policy.md  financial-crime-prevention-policy.md.metadata.json  financial-crime-prevention-policy.metadata.json  information-security-policy.md  information-security-policy.md.metadata.json  information-security-policy.metadata.json  operational-resilience-policy.md  (+26 more)
docs/: process.md  section_chunk_mapping.md
docs/adr/: 001-s3-vectors.md  002-structure-aware-chunking.md  003-llm-as-judge.md  004-embedding-models.md
docs/prompts/: generation_system_prompt.txt
scripts/: convert_fca_to_sections.py  generate_policies.py  generate_qa.py  patch_difficulty.py  query.py  run_eval.py  scrape_fca.py  setup_knowledge_bases.py  test_hybrid.py
src/: judge.py  metrics.py  pipeline.py
src/chunking/: structure.py
src/scraper/: fca_client.py
tests/: test_structure_chunking.py
