[project]
name = "rag-eval-framework"
version = "0.1.0"
description = "A configurable RAG evaluation framework with quantified comparisons across chunking strategies, embedding models, and retrieval methods."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "python-dotenv",
    "boto3",
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv]
keyring-provider = "subprocess"
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "assured-oss"
url = "https://oauth2accesstoken@us-python.pkg.dev/cloud-aoss/cloud-aoss-python/simple/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
python-dotenv = { index = "assured-oss" }
boto3 = { index = "assured-oss" }
requests = { index = "assured-oss" }

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import sorting)
    "B",   # bugbear (common bugs and design issues)
    "UP",  # pyupgrade (modernise syntax for the target Python version)
    "C4",  # comprehensions (cleaner list/dict/set comprehensions)
    "SIM", # simplify (straightforward refactors)
]
ignore = [
    # Add ignores here if specific rules become noisy. Empty for now —
    # tighten the net first, loosen only when there's a concrete reason.
]

[tool.ruff.lint.per-file-ignores]
# Tests can have longer lines and unused imports for fixtures.
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
